# mini-production-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: Hittable.h  Lambertian.h  Material.h  Ray.h  Sphere.h  Vec3.h
include/core/: Camera.h  Ray.h  Vec3.h
include/geometry/: Hittable.h  HittableList.h
include/shading/: Material.h  Metal.h
src/: main.cpp
src/core/: BVH.h  Camera.cpp  Camera.h  Intersection.h  Ray.h
src/renderer/: Integrator.h  PathTracer.cpp
src/shading/: BSDF.h
